objects/et4ae5__Business_Unit__c.object
<CustomObject>
    <fields>
        <fullName>et4ae5__BusinessUnitIDx__c</fullName>
        <formula>&quot;;&quot;&amp; et4ae5__Business_Unit_ID__c &amp;&quot;;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BusinessUnitIDx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Business_Unit_ID2__c</fullName>
        <formula>et4ae5__Business_Unit_ID__c  &amp;  IF( et4ae5__IsParentAccountMID__c , &quot; (Parent)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Business_Unit_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Business Unit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Business_Unit_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Button_Image__c</fullName>
        <formula>IF( et4ae5__Enabled__c , &quot;/img/checkbox_checked.gif&quot;, &quot;/img/checkbox_unchecked.gif&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Button Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__IsParentAccountMID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsParentAccountMID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__PreSaved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Business Unit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>